--- a/app/static/tabpay_css/dashboard.css
+++ b/app/static/tabpay_css/dashboard.css
@@ -220,8 +220,7 @@ input:focus {
   text-align: center;
   width: 50%;
   margin: 0 auto;
-
-  /* display: none;  */
+  display: none;
 }
 .card {
   border: 2px solid black;
