--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -43,7 +43,10 @@
       </button>
 
       <div class="tabpay-logo text-center">
-        <img src="{{url_for('static', filename='images/logo')}}" alt="TabPay Logo" />
+        <img
+          src="{{url_for('static', filename='images/logo')}}"
+          alt="TabPay Logo"
+        />
       </div>
       <a href="{{ url_for('home') }}" class="text-dark">
         <i
@@ -72,7 +75,10 @@
       </div>
       <div class="offcanvas-body">
         <div class="tabpay-logo mb-2">
-          <img src="{{url_for('static',filename='images/logo')}}" alt="TabPay Logo" />
+          <img
+            src="{{url_for('static',filename='images/logo')}}"
+            alt="TabPay Logo"
+          />
         </div>
 
         <a
@@ -117,7 +123,10 @@
           <!-- Sidebar for larger screens -->
           <div class="glass-sidebar">
             <div class="tabpay-logo mb-3">
-              <img src="{{url_for('static', filename='images/logo.png')}}" alt="TabPay Logo" />
+              <img
+                src="{{url_for('static', filename='images/logo.png')}}"
+                alt="TabPay Logo"
+              />
             </div>
             <!-- Sidebar contents -->
             <div class="links mt-3">
