--- a/app/templates/security/login_user.html
+++ b/app/templates/security/login_user.html
@@ -1,92 +1,44 @@
 {% extends "security/base.html" %}
-{% from "security/_macros.html" import render_field_with_errors, render_field, render_form_errors, render_field_errors, prop_next %}
+{% from "security/_macros.html" import render_field_with_errors, render_field, render_field_errors, render_form_errors, prop_next %}
 
 {% block content %}
   {% include "security/_messages.html" %}
-  <div>{% with messages = get_flashed_messages() %}
-    {% if messages %}
-        <ul>
-        {% for message in messages %}
-            <li>{{ message }}</li>
-        {% endfor %}
-        </ul>
+  <h1>{{ _fsdomain('Login') }}</h1>
+  <form action="{{ url_for_security('login') }}{{ prop_next() }}" method="post" name="login_user_form">
+    {{ login_user_form.hidden_tag() }}
+    {{ render_form_errors(login_user_form) }}
+    {% if "email" in identity_attributes %}{{ render_field_with_errors(login_user_form.email) }}{% endif %}
+    {% if login_user_form.username and "username" in identity_attributes %}
+      {% if "email" in identity_attributes %}<h3>{{ _fsdomain("or") }}</h3>{% endif %}
+      {{ render_field_with_errors(login_user_form.username) }}
     {% endif %}
-{% endwith %}
-</div>
-  <div class="container-fluid">
-    <div class="main-container">
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="image-section"></div>
-        </div>
-        <div class="col-lg-6">
-          <div class="head-form">
-            <div class="p-4">
-              <h1>{{ _fsdomain('Login') }}</h1>
-              <p>Sign in to continue</p>
-            </div>
-            <hr />
-            <form action="{{ url_for_security('login') }}{{ prop_next() }}" method="post" name="login_user_form">
-              {{ login_user_form.hidden_tag() }}
-              {{ render_form_errors(login_user_form) }}
-
-              <div class="form-section">
-                {% if "email" in identity_attributes %}
-                  <div>
-                    {{ render_field_with_errors(login_user_form.email, class="input") }}
-                  </div>
-                {% endif %}
-                {% if login_user_form.username and "username" in identity_attributes %}
-                  {% if "email" in identity_attributes %}
-                    <h3>{{ _fsdomain("or") }}</h3>
-                  {% endif %}
-                  <div>
-                    {{ render_field_with_errors(login_user_form.username, class="input") }}
-                  </div>
-                {% endif %}
-                
-                <div class="fs-gap">
-                  <div>
-                    {{ render_field_with_errors(login_user_form.password, class="input") }}
-                  </div>
-                
-                
-                {{ render_field_with_errors(login_user_form.remember) }}
-              </div>
-                {{ render_field_errors(login_user_form.csrf_token) }}
-                {{ render_field(login_user_form.submit, class="button") }}
-              </div>
-            </form>
-
-            {% if security.webauthn %}
-              <hr class="fs-gap">
-              <h2>{{ _fsdomain("Use WebAuthn to Sign In") }}</h2>
-              <div>
-                <form method="get" id="wan_signin_form" name="wan_signin_form">
-                  <input id="wan_signin" name="wan_signin" type="submit" value="{{ _fsdomain('Sign in with WebAuthn') }}" formaction="{{ url_for_security('wan_signin') }}{{ prop_next() }}">
-                </form>
-              </div>
-            {% endif %}
-            
-            {% if security.oauthglue %}
-              <hr class="fs-gap">
-              <h2>{{ _fsdomain("Use Social Oauth to Sign In") }}</h2>
-              {% for provider in security.oauthglue.provider_names %}
-                <div class="fs-gap">
-                  <form method="post" id="{{ provider }}_form" name="{{ provider }}_form">
-                    <input id="{{ provider }}" name="{{ provider }}" type="submit" value="{{ _fsdomain('Sign in with ')~provider }}" formaction="{{ url_for_security('oauthstart', name=provider) }}{{ prop_next() }}">
-                    {% if csrf_token is defined %}
-                      <input id="{{ provider }}_csrf_token" name="{{ provider }}_csrf_token" type="hidden" value="{{ csrf_token() }}">
-                    {% endif %}
-                  </form>
-                </div>
-              {% endfor %}
-            {% endif %}
-            
-          </div>
-        </div>
-      </div>
+    <div class="fs-gap">{{ render_field_with_errors(login_user_form.password) }}</div>
+    {{ render_field_with_errors(login_user_form.remember) }}
+    {{ render_field_errors(login_user_form.csrf_token) }}
+    {{ render_field(login_user_form.submit) }}
+  </form>
+  {% if security.webauthn %}
+    <hr class="fs-gap">
+    <h2>{{ _fsdomain("Use WebAuthn to Sign In") }}</h2>
+    <div>
+      <form method="get" id="wan_signin_form" name="wan_signin_form">
+        <input id="wan_signin" name="wan_signin" type="submit" value="{{ _fsdomain('Sign in with WebAuthn') }}" formaction="{{ url_for_security('wan_signin') }}{{ prop_next() }}">
+      </form>
     </div>
-  </div>
-
+  {% endif %}
+  {% if security.oauthglue %}
+    <hr class="fs-gap">
+    <h2>{{ _fsdomain("Use Social Oauth to Sign In") }}</h2>
+    {% for provider in security.oauthglue.provider_names %}
+      <div class="fs-gap">
+        <form method="post" id="{{ provider }}_form" name="{{ provider }}_form">
+          <input id="{{ provider }}" name="{{ provider }}" type="submit" value="{{ _fsdomain('Sign in with ')~provider }}" formaction="{{ url_for_security('oauthstart', name=provider) }}{{ prop_next() }}">
+          {% if csrf_token is defined %}
+            <input id="{{ provider }}_csrf_token" name="{{ provider }}_csrf_token" type="hidden" value="{{ csrf_token() }}">
+          {% endif %}
+        </form>
+      </div>
+    {% endfor %}
+  {% endif %}
+  {% include "security/_menu.html" %}
 {% endblock content %}
