--- a/app/templates/security/register_user.html
+++ b/app/templates/security/register_user.html
@@ -1,63 +1,20 @@
-{% extends 'security/base.html' %}
+{% extends "security/base.html" %}
 {% from "security/_macros.html" import render_field_with_errors, render_field, render_form_errors, render_field_errors %}
 
 {% block content %}
-{% include "security/_messages.html" %}
-<div>{% with messages = get_flashed_messages() %}
-  {% if messages %}
-      <ul>
-      {% for message in messages %}
-          <li>{{ message }}</li>
-      {% endfor %}
-      </ul>
-  {% endif %}
-{% endwith %}
-</div>
-<div class="container-fluid">
-  <div class="main-container">
-    <div class="row">
-      <div class="col-lg-6">
-        <div class="image-section"></div>
-      </div>
-      <div class="col-lg-6">
-        <div class="head-form">
-          <div class="p-3">
-            <h1>
-              Create new <br />
-              Account
-            </h1>
-            <p>
-              Already Registered?
-              <a href="{{ url_for('security.login') }}" style="text-decoration: none; color: #3fb411">Login</a>
-            </p>
-          </div>
-          <div class="hr"><hr /></div>
-
-          <form action="{{ url_for('security.register') }}" method="post" name="register_user_form">
-            {{ register_user_form.hidden_tag() }}
-            {{ render_form_errors(register_user_form) }}
-            <div class="form-section">
-              <div>
-                {{ render_field_with_errors(register_user_form.full_name, class="input") }}
-              </div>
-              <div>
-                {{ render_field_with_errors(register_user_form.email, class="input") }}
-              </div>
-              <div>
-                {{ render_field_with_errors(register_user_form.password, class="input") }}
-              </div>
-              <div>
-                {{ render_field_with_errors(register_user_form.id_number, class="input") }}
-              </div>
-             <div>{{ render_field_errors(register_user_form.csrf_token) }}
-              {{ render_field(register_user_form.submit, class="button") }}
-            </div>
-              
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-{% endblock %}
+  {% include "security/_messages.html" %}
+  <h1>{{ _fsdomain('Register') }}</h1>
+  <form action="{{ url_for_security('register') }}" method="post" name="register_user_form">
+    {{ register_user_form.hidden_tag() }}
+    {{ render_form_errors(register_user_form) }}
+    {{ render_field_with_errors(register_user_form.email) }}
+    {% if config["SECURITY_USERNAME_ENABLE"] %}{{ render_field_with_errors(register_user_form.username) }}{% endif %}
+    {{ render_field_with_errors(register_user_form.password) }}
+    {% if register_user_form.password_confirm %}
+      {{ render_field_with_errors(register_user_form.password_confirm) }}
+    {% endif %}
+    {{ render_field_errors(register_user_form.csrf_token) }}
+    {{ render_field(register_user_form.submit) }}
+  </form>
+  {% include "security/_menu.html" %}
+{% endblock content %}
