--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,7 +31,10 @@
         <div class="container-fluid" style="background-color: whitesmoke">
           <!-- Logo: Always stays on the left -->
           <a class="navbar-brand order-1" href="#">
-            <img src="{{url_for('static',filename='images/logo.png')}}" alt="TabPay Logo" />
+            <img
+              src="{{url_for('static',filename='images/logo.png')}}"
+              alt="TabPay Logo"
+            />
           </a>
 
           <!-- Navbar toggler for mobile, next to the logo -->
