--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,7 +23,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/app/static/tabpay_css/dashboard.css" />
+    <link rel="stylesheet" href="../static/tabpay_css/dashboard.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body>
@@ -181,7 +181,7 @@
                   <i class="bi bi-search me-2"></i>
                   <i class="bi bi-bell"></i>
                   <img
-                    src="../static/images/profile_image.png"
+                    src="{{url_for('static',filename='images/image.png')}}"
                     alt="Profile Picture"
                   />
                   <span>Cheruiyot</span>
@@ -203,7 +203,10 @@
         <input type="text" class="form-control ps-4" placeholder="Search" />
       </div>
 
-      <img src="../static/images/profile_image.png" alt="Profile Picture" />
+      <img
+        src="{{url_for('static',filename='images/image.png')}}"
+        alt="Profile Picture"
+      />
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
